// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> should not render links 1`] = `
.c3 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem;
}

.c6 {
  color: #0A1128;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c1 {
  position: fixed;
  z-index: 5;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  border-bottom: #DDDDDD;
  background: #FFFFFF;
  transition: all 300ms ease-in-out;
}

.c1 >.c2 {
  padding-top: 0;
  padding-bottom: 0;
}

.c1 .c5 {
  margin-top: 0;
  margin-bottom: 0;
}

.c4 {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.c0 {
  z-index: 6;
  position: fixed;
  top: 2rem;
  right: 2rem;
  width: 4rem;
  height: 4rem;
  background: #0A1128;
  color: #FFFFFF;
  border: none;
  display: none;
  pointer-events: all;
}

.c0 >svg {
  width: 2.5rem;
  height: 2.5rem;
}

.c7 {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: inherit;
}

.c7 >img {
  max-height: 3rem;
}

.c8 {
  display: flex;
  flex-flow: row wrap;
}

@media (max-width: 768px) {
  .c1 {
    height: 100vh;
    visibility: hidden;
    opacity: 0;
  }

  .c1 0>.c2 {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    height: 100vh;
    align-items: center;
    overflow-y: auto;
  }

  .c1 .c5 {
    padding-bottom: 3.2rem;
    display: flex;
    justify-content: center;
  }
}

@media (max-width: 768px) {
  .c4 {
    display: block;
    text-align: center;
    padding: 4.8rem 0;
  }
}

@media (max-width: 768px) {
  .c0 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

@media (max-width: 768px) {
  .c8 {
    flex-flow: column wrap;
    align-content: center;
  }
}

<div>
  <button
    aria-label="Open/Close menu"
    class="c0"
    visible="0"
  >
    <svg
      aria-label="Open menu"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="3"
        x2="21"
        y1="12"
        y2="12"
      />
      <line
        x1="3"
        x2="21"
        y1="6"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
  <div
    class="c1"
    visible="0"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <h1
          class="c5 c6"
          colordark="1"
          uppercase="1"
        >
          <a
            class="c7"
            href="#target"
          >
            <span>
              Logo
            </span>
          </a>
        </h1>
        <nav
          aria-label="Main menu"
          class="c8"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<Menu /> should render Logo and Main Menu Nav 1`] = `
.c3 {
  max-width: 120rem;
  margin: 0 auto;
  padding: 3.2rem;
}

.c6 {
  color: #0A1128;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c1 {
  position: fixed;
  z-index: 5;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  border-bottom: #DDDDDD;
  background: #FFFFFF;
  transition: all 300ms ease-in-out;
}

.c1 >.c2 {
  padding-top: 0;
  padding-bottom: 0;
}

.c1 .c5 {
  margin-top: 0;
  margin-bottom: 0;
}

.c4 {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.c0 {
  z-index: 6;
  position: fixed;
  top: 2rem;
  right: 2rem;
  width: 4rem;
  height: 4rem;
  background: #0A1128;
  color: #FFFFFF;
  border: none;
  display: none;
  pointer-events: all;
}

.c0 >svg {
  width: 2.5rem;
  height: 2.5rem;
}

.c7 {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: inherit;
}

.c7 >img {
  max-height: 3rem;
}

.c8 {
  display: flex;
  flex-flow: row wrap;
}

.c9 {
  display: block;
  text-decoration: none;
  font-size: 1.6rem;
  padding: 1.6rem;
  color: #0A1128;
  position: relative;
}

.c9::after {
  content: '';
  position: absolute;
  bottom: 0.7rem;
  left: 50%;
  width: 0;
  height: 0.2rem;
  background: #dc143c;
  transition: all 300ms ease-in-out;
}

.c9:hover::after {
  left: 25%;
  width: 50%;
}

@media (max-width: 768px) {
  .c1 {
    height: 100vh;
    visibility: hidden;
    opacity: 0;
  }

  .c1 0>.c2 {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: 1fr;
    height: 100vh;
    align-items: center;
    overflow-y: auto;
  }

  .c1 .c5 {
    padding-bottom: 3.2rem;
    display: flex;
    justify-content: center;
  }
}

@media (max-width: 768px) {
  .c4 {
    display: block;
    text-align: center;
    padding: 4.8rem 0;
  }
}

@media (max-width: 768px) {
  .c0 {
    display: flex;
    align-items: center;
    justify-content: center;
  }
}

@media (max-width: 768px) {
  .c8 {
    flex-flow: column wrap;
    align-content: center;
  }
}

<div>
  <button
    aria-label="Open/Close menu"
    class="c0"
    visible="0"
  >
    <svg
      aria-label="Open menu"
      fill="none"
      height="1em"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="3"
        x2="21"
        y1="12"
        y2="12"
      />
      <line
        x1="3"
        x2="21"
        y1="6"
        y2="6"
      />
      <line
        x1="3"
        x2="21"
        y1="18"
        y2="18"
      />
    </svg>
  </button>
  <div
    class="c1"
    visible="0"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
      >
        <h1
          class="c5 c6"
          colordark="1"
          uppercase="1"
        >
          <a
            class="c7"
            href="#target"
          >
            <span>
              Logo
            </span>
          </a>
        </h1>
        <nav
          aria-label="Main menu"
          class="c8"
        >
          <a
            class="c9"
            href="#target1"
            target="_self"
          >
            Link 1
          </a>
          <a
            class="c9"
            href="#target2"
            target="_self"
          >
            Link 2
          </a>
          <a
            class="c9"
            href="#target3"
            target="_self"
          >
            Link 3
          </a>
          <a
            class="c9"
            href="#target4"
            target="_self"
          >
            Link 4
          </a>
          <a
            class="c9"
            href="#target5"
            target="_self"
          >
            Link 5
          </a>
          <a
            class="c9"
            href="#target6"
            target="_self"
          >
            Link 6
          </a>
          <a
            class="c9"
            href="#target7"
            target="_self"
          >
            Link 7
          </a>
          <a
            class="c9"
            href="#target8"
            target="_self"
          >
            Link 8
          </a>
          <a
            class="c9"
            href="#target9"
            target="_self"
          >
            Link 9
          </a>
          <a
            class="c9"
            href="#target10"
            target="_self"
          >
            Link 10
          </a>
        </nav>
      </div>
    </div>
  </div>
</div>
`;
